# MiroThinker

./: .gitignore  AGENTS.md  CLAUDE.md  WORKSPACE.md  justfile  mkdocs.yml  pyproject.toml
apps/admin-console/: pyproject.toml
apps/admin-console/backend/: deps.py  main.py
apps/admin-console/backend/api/: batch.py  chat.py  dashboard.py  data.py  domains.py  export.py  pipeline.py  pipeline_issues.py  review.py  upload.py
apps/admin-console/backend/services/: chat_context.py  web_search_cache.py
apps/admin-console/backend/static/: browse.html  chat.html
apps/admin-console/backend/storage/: chat_session.py
apps/admin-console/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/admin-console/frontend/src/: App.tsx  api.ts  main.tsx
apps/admin-console/frontend/src/components/: EvidenceList.tsx  QualityTag.tsx  StatCard.tsx
apps/admin-console/frontend/src/pages/: Chat.tsx  Dashboard.tsx  DomainList.tsx  RecordDetail.tsx
apps/admin-console/tests/: conftest.py  test_batch.py  test_batch_postgres.py  test_chat_c_handler.py  test_chat_classifier_b_g_tune.py  test_chat_classifier_c_type.py  test_chat_d_narrowing.py  test_chat_e_web_search.py  test_chat_g_clarification.py  test_chat_multi_domain_entity_stack.py  test_chat_retrieval.py  test_chat_session_persistence.py  test_chat_session_store.py  test_chat_v1.py  test_classifier_benchmark.py  test_crud.py  test_dashboard.py  test_data_api.py  test_data_api_metrics.py  test_data_api_paper_v011.py  test_data_api_quality_status.py  test_data_redirect.py  test_domains.py  test_domains_postgres.py  test_export.py  test_export_postgres.py  test_main_freshness.py  test_main_milvus_env.py  test_migration_v006.py  test_paper_api.py  test_pipeline_api.py  test_professor_api.py  test_review_api.py  test_upload_pipeline_trigger.py
apps/admin-console/tests/fixtures/: intent_classifier_benchmark.jsonl  intent_classifier_benchmark_README.md
apps/company-data-agent/: README.md  pyproject.toml
apps/company-data-agent/docs/: issue-10-配置与路径约定说明.md  issue-11-主数据表解析说明.md  issue-12-company-identity-说明.md  issue-13-skeleton-import-说明.md  issue-9-公司记录模型说明.md
apps/company-data-agent/src/company_data_agent/: __init__.py
apps/company-data-agent/src/company_data_agent/config/: __init__.py  settings.py
apps/company-data-agent/src/company_data_agent/identity/: __init__.py  company_identity.py
apps/company-data-agent/src/company_data_agent/importer/: __init__.py  skeleton_import.py
apps/company-data-agent/src/company_data_agent/ingest/: __init__.py  master_list_parser.py
apps/company-data-agent/src/company_data_agent/models/: __init__.py  company_record.py
apps/company-data-agent/tests/: test_company_identity.py  test_company_record.py  test_config_settings.py  test_master_list_parser.py  test_skeleton_import.py
docs/: Agentic-RAG-Operating-Guide.md  Agentic-RAG-PRD.md  Codex-Claude-Cross-Review-Usage.md  Company-Data-Agent-PRD.md  Data-Agent-Shared-Spec.md  Paper-Data-Agent-PRD.md  (+9 more)
(+734 files in other folders)
