[project]
name = "admin-console"
version = "0.1.0"
description = "Web admin console for the Shenzhen sci-tech data platform"
requires-python = ">=3.12"
dependencies = [
    "miroflow-agent",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    # Postgres access (plan 005 §9.6)
    "psycopg[binary,pool]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv.sources]
miroflow-agent = { path = "../miroflow-agent", editable = true }
