[project]
name = "company-data-agent"
version = "0.1.0"
description = "Company data agent domain models and pipeline components"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/company_data_agent"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
addopts = [
    "-rA",
    "--show-capture=stderr",
]
